feat(spdx): Added support for pasring of SPDX-2.3 (ISR) generated via fossology
Signed-off-by: akapti <abdul.kapti@siemens-healthineers.com>